--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,7 @@
 
 #head1{
     display:flex;
+    justify-content:space-between;
 }
 #head{
     display:flex;
@@ -19,8 +20,11 @@
     margin-left: 50px;
 }
 #heading{
-    padding-top: 50px;
-    padding-left: 400px;  
+    padding-top: 50px;  
+}
+#icon{
+    margin-top: 65px;
+    margin-right: 50px;
 }
 #search{
     margin-right: 2%;
