--- a/css/products.css
+++ b/css/products.css
@@ -59,6 +59,7 @@ ul a{
 #products{
     display:flex;
     flex-wrap: wrap;
+    margin: 0 8% 0 8%;
 }
 .product-container{
     padding: 1%;
@@ -66,13 +67,14 @@ ul a{
     flex-basis: 16%;
 }
 .product-image img {
-    /* max-width: 100%; */
     background-color: #F1F2F6;
+    background-size: contain;
     object-fit: contain;
     width: 300px;
     height: 280px;
 }
 .btn{
+    max-width: 100%;
     width: 150px;
     height: 30px;
     font-size: 15px;
@@ -82,4 +84,7 @@ ul a{
     border: 1px solid #ffffff;
     border-radius: 5px;
     padding: 4px;
+}
+#all-prods{
+    text-align: center;
 }
