--- a/css/products.css
+++ b/css/products.css
@@ -7,6 +7,7 @@
 
 #head1{
     display:flex;
+    justify-content:space-between;
 }
 #head{
     display:flex;
@@ -20,7 +21,7 @@
 }
 #heading{
     padding-top: 50px;
-    padding-left: 400px;  
+    justify-content: center;  
 }
 #search{
     margin-right: 2%;
